# BCR-map_paper_analysis

./: .gitattributes  .gitignore  BCR-map_figure_2.ipynb  BCR-map_figure_3.ipynb  CITATION.cff  LICENSE  MyBasics.py  README.md  USAGE.md  __init__.py  environment.yml  extract_vit_patch_embeddings.py  main.py  pyproject.toml  requirements.txt
BCR-map_intermediate_files/: A2_clonality.csv  G1_SHM_total.csv  M_shannon_total.csv  M_shm_1mid10_10high_clonality.csv  all_vaccination_G1_SHM.csv  all_vaccination_G2_SHM.csv  all_vaccination_covid_influenza_binder.csv
bcr_map/: __init__.py  cli.py  train.py
checkpoints/: README.md
configs/: mil_training.yaml
logs/lightning_logs/In-house/sampling_10000/none/mil_hipt_vit_b16_6class_db83/: best_confusion_matrix_fold_0.csv  best_confusion_matrix_fold_1.csv  best_confusion_matrix_fold_2.csv  best_per_class_auroc_fold_0.csv  best_per_class_auroc_fold_1.csv  best_per_class_auroc_fold_2.csv  hparams.yaml  metrics.csv
logs/lightning_logs/In-house/sampling_100000/color/mil_hipt_vit_b16_6class_02f3/: best_confusion_matrix_fold_0.csv  best_confusion_matrix_fold_1.csv  best_confusion_matrix_fold_2.csv  best_per_class_auroc_fold_0.csv  best_per_class_auroc_fold_1.csv  best_per_class_auroc_fold_2.csv  hparams.yaml  metrics.csv
logs/lightning_logs/In-house/sampling_100000/none/mil_hipt_vit_b16_6class_f187/: best_confusion_matrix_fold_0.csv  best_confusion_matrix_fold_1.csv  best_confusion_matrix_fold_2.csv  best_per_class_auroc_fold_0.csv  best_per_class_auroc_fold_1.csv  best_per_class_auroc_fold_2.csv  hparams.yaml  metrics.csv
logs/lightning_logs/In-house/sampling_100000/shm/mil_hipt_vit_b16_6class_acc8/: best_confusion_matrix_fold_0.csv  hparams.yaml  (+6 more)
scripts/: extract_embeddings_user_images.sh  train_mil_single_run.sh
utils/: __init__.py  loss.py  mil_data.py  mil_model.py
(+128 files in other folders)
